tests/baselines/reference/autoLift2.errors.txt
==== tests/cases/compiler/autoLift2.ts (10 errors) ====
    class A
    
    {
        constructor() {
            this.foo: any;
                    ~
!!! autoLift2.ts(5,17): error TS1005: ';' expected.
                 ~~~
!!! autoLift2.ts(5,14): error TS2094: The property 'foo' does not exist on value of type 'A'.
                      ~~~
!!! autoLift2.ts(5,19): error TS2095: Could not find symbol 'any'.
            this.bar: any;
                    ~
!!! autoLift2.ts(6,17): error TS1005: ';' expected.
                 ~~~
!!! autoLift2.ts(6,14): error TS2094: The property 'bar' does not exist on value of type 'A'.
                      ~~~
!!! autoLift2.ts(6,19): error TS2095: Could not find symbol 'any'.
        }
    
    
      baz() {
    
         this.foo = "foo";
              ~~~
!!! autoLift2.ts(12,11): error TS2094: The property 'foo' does not exist on value of type 'A'.
    
         this.bar = "bar";
              ~~~
!!! autoLift2.ts(14,11): error TS2094: The property 'bar' does not exist on value of type 'A'.
    
         [1, 2].forEach((p) => this.foo);
                                    ~~~
!!! autoLift2.ts(16,33): error TS2094: The property 'foo' does not exist on value of type 'A'.
    
         [1, 2].forEach((p) => this.bar);
                                    ~~~
!!! autoLift2.ts(18,33): error TS2094: The property 'bar' does not exist on value of type 'A'.
    
      }
    
    }
    
    
    
    var a = new A();
    
    a.baz();
    
    
    